@@ -1,11 +1,15 @@
 package projects.medicationtracker;
 
+import static android.view.View.GONE;
+import static android.view.View.VISIBLE;
+
 import android.content.Intent;
+import android.content.res.ColorStateList;
+import android.graphics.Color;
 import android.os.Bundle;
 import android.text.Editable;
 import android.text.TextWatcher;
 import android.view.MenuItem;
-import android.view.View;
 import android.widget.ArrayAdapter;
 import android.widget.LinearLayout;
 import android.widget.ScrollView;
@@ -13,25 +17,34 @@ import android.widget.TextView;
 
 import androidx.activity.OnBackPressedCallback;
 import androidx.annotation.NonNull;
-import androidx.appcompat.app.AppCompatActivity;
 import androidx.fragment.app.FragmentContainerView;
 
+import com.google.android.material.button.MaterialButton;
+import com.google.android.material.color.MaterialColors;
 import com.google.android.material.textfield.MaterialAutoCompleteTextView;
 import com.google.android.material.textfield.TextInputLayout;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
 import kotlin.Pair;
 import projects.medicationtracker.Fragments.MyMedicationsFragment;
-import projects.medicationtracker.Helpers.DBHelper;
+import projects.medicationtracker.Helpers.NativeDbHelper;
 import projects.medicationtracker.Models.Medication;
 import projects.medicationtracker.Views.StandardCardView;
 
 public class MyMedications extends BaseActivity {
-    DBHelper db = new DBHelper(this);
+    NativeDbHelper db;
+
+    private MaterialButton activeButton;
+    private MaterialButton inactiveButton;
+    private LinearLayout activeLayout;
+    private LinearLayout inactiveLayout;
+    private ScrollView scrollMyMeds;
+    private TextView noMeds;
 
     /**
      * Creates MyMedications
@@ -42,53 +55,62 @@ public class MyMedications extends BaseActivity {
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_my_medications);
+
+        db = new NativeDbHelper(this);
+
         Objects.requireNonNull(getSupportActionBar()).setDisplayHomeAsUpEnabled(true);
 
         Objects.requireNonNull(getSupportActionBar()).setTitle(getString(R.string.my_medications));
 
         String you = getString(R.string.you);
+        ArrayList<Medication> allMeds = db.getAllMedications();
 
-        if (db.numberOfRows() == 0)
+        noMeds = findViewById(R.id.noMyMeds);
+        scrollMyMeds = findViewById(R.id.scrollMyMeds);
+
+        if (allMeds.isEmpty())
             return;
         else {
-            TextView noMeds = findViewById(R.id.noMyMeds);
-            noMeds.setVisibility(View.GONE);
-            ScrollView scrollMyMeds = findViewById(R.id.scrollMyMeds);
-            scrollMyMeds.setVisibility(View.VISIBLE);
+            noMeds.setVisibility(GONE);
+            scrollMyMeds.setVisibility(VISIBLE);
         }
 
         final TextInputLayout namesLayout = findViewById(R.id.names_layout);
         final MaterialAutoCompleteTextView namesSelector = findViewById(R.id.nameSpinner);
-        final LinearLayout myMedsLayout = findViewById(R.id.medLayout);
+        final LinearLayout activeToggleLayout = findViewById(R.id.active_toggle_layout);
 
-        ArrayList<String> patientNames = db.getPatients();
-        ArrayList<Pair<String, ArrayList<Medication>>> allMeds = new ArrayList<>();
+        activeLayout = findViewById(R.id.med_layout);
+        inactiveLayout = findViewById(R.id.med_layout_inactive);
+
+        activeButton = findViewById(R.id.active_button);
+        inactiveButton = findViewById(R.id.inactive_button);
+
+        List<String> patientNames = allMeds.stream()
+                .map(Medication::getPatientName)
+                .distinct()
+                .collect(Collectors.toList());
+
+        ArrayList<Pair<String, ArrayList<Medication>>> patientMedPairs = new ArrayList<>();
 
         for (String patient : patientNames) {
-            ArrayList<Medication> meds = db.getMedicationsForPatient(patient).stream().filter(
-                    m -> m.getChild() == null
-            ).collect(Collectors.toCollection(ArrayList::new));
+            ArrayList<Medication> meds = allMeds.stream()
+                    .filter(m -> m.getPatientName().equals(patient) && m.getChild() == null)
+                    .collect(Collectors.toCollection(ArrayList::new));
 
-            if (meds.size() > 0) {
-                allMeds.add(new Pair<>(patient, meds));
+            if (!meds.isEmpty()) {
+                patientMedPairs.add(new Pair<>(patient, meds));
             }
         }
 
-        if (allMeds.size() == 1) {
-            ArrayList<Medication> patientMeds = db.getMedicationsForPatient(allMeds.get(0).getFirst());
-
-            for (Medication medication : patientMeds) {
-                if (medication.getChild() != null) continue;
-
-                createMyMedCards(medication, myMedsLayout);
-            }
-        } else if (allMeds.size() > 1) {
-            String[] patients = allMeds.stream().map(Pair::getFirst).map(p ->
+        if (patientMedPairs.size() == 1) {
+            populateViews(allMeds);
+        } else if (patientMedPairs.size() > 1) {
+            String[] patients = patientMedPairs.stream().map(Pair::getFirst).map(p ->
                     Objects.equals(p, "ME!") ? getString(R.string.you) : p).toArray(String[]::new
             );
 
-            if (allMeds.stream().allMatch(m -> m.getFirst().equals("ME!"))) {
-                allMeds = allMeds.stream().map(m -> {
+            if (patientMedPairs.stream().allMatch(m -> m.getFirst().equals("ME!"))) {
+                patientMedPairs = patientMedPairs.stream().map(m -> {
                     if (m.getFirst().equals("ME!")) {
                         m = new Pair<>(you, m.getSecond());
                     }
@@ -100,9 +122,9 @@ public class MyMedications extends BaseActivity {
             ArrayAdapter<String> adapter = new ArrayAdapter<>(this, android.R.layout.simple_dropdown_item_1line, patients);
             namesSelector.setAdapter(adapter);
 
-            namesLayout.setVisibility(View.VISIBLE);
+            namesLayout.setVisibility(VISIBLE);
 
-            final ArrayList<Pair<String, ArrayList<Medication>>> allMedsClone = (ArrayList<Pair<String, ArrayList<Medication>>>) allMeds.clone();
+            final ArrayList<Pair<String, ArrayList<Medication>>> allMedsClone = (ArrayList<Pair<String, ArrayList<Medication>>>) patientMedPairs.clone();
 
             namesSelector.addTextChangedListener(new TextWatcher() {
                 @Override public void beforeTextChanged(CharSequence s, int start, int count, int after) {}
@@ -110,30 +132,64 @@ public class MyMedications extends BaseActivity {
 
                 @Override
                 public void afterTextChanged(Editable s) {
-                    myMedsLayout.removeAllViews();
+                    activeLayout.removeAllViews();
+                    inactiveLayout.removeAllViews();
+                    activeToggleLayout.setVisibility(GONE);
 
                     String selected = s.toString();
                     final String patient = selected.equals(you) ? "ME!" : selected;
 
-                    ArrayList<Medication> patientMeds = allMedsClone.stream().filter(
-                            m -> m.getFirst().equals(patient)
-                    ).map(Pair::getSecond).collect(Collectors.toList()).get(0);
+                    ArrayList<Medication> patientMeds = allMedsClone.stream()
+                            .filter(m -> m.getFirst().equals(patient))
+                            .map(Pair::getSecond)
+                            .collect(Collectors.toList())
+                            .stream()
+                            .findFirst()
+                            .orElse(null);
 
-                    for (Medication medication : patientMeds) {
-                        if (medication.getChild() != null) continue;
-
-                        createMyMedCards(medication, myMedsLayout);
+                    if (patientMeds == null) {
+                        return;
                     }
 
+                    populateViews(patientMeds);
+
                     namesSelector.clearFocus();
+
+                    if (inactiveLayout.getChildCount() > 0) {
+                        activeToggleLayout.setVisibility(VISIBLE);
+                    }
+
+                    setActive(activeLayout.getChildCount() > 0);
                 }
             });
 
             if (Arrays.asList(patients).contains(you)) {
                 namesSelector.setText(you, false);
             } else {
-                namesSelector.setText(adapter.getItem(0).toString(), false);
+                namesSelector.setText(adapter.getItem(0), false);
             }
+        }
+
+        activeButton.setOnClickListener(
+                (view) -> {
+                    setActive(true);
+                    activeLayout.setVisibility(VISIBLE);
+                    inactiveLayout.setVisibility(GONE);
+                }
+        );
+
+        inactiveButton.setOnClickListener(
+                (view) -> {
+                    setActive(false);
+                    activeLayout.setVisibility(GONE);
+                    inactiveLayout.setVisibility(VISIBLE);
+                }
+        );
+
+        setActive(true);
+
+        if (inactiveLayout.getChildCount() > 0) {
+            activeToggleLayout.setVisibility(VISIBLE);
         }
 
         getOnBackPressedDispatcher().addCallback(this, new OnBackPressedCallback(true) {
@@ -175,7 +231,7 @@ public class MyMedications extends BaseActivity {
      * @param medication The Medication whose details will be displayed.
      * @param baseLayout The LinearLayout in which to place the card
      */
-    private void createMyMedCards(Medication medication, LinearLayout baseLayout) {
+    private void createMyMedCard(Medication medication, LinearLayout baseLayout) {
         StandardCardView thisMedCard = new StandardCardView(this);
         FragmentContainerView thisMedLayout = new FragmentContainerView(this);
         Bundle bundle = new Bundle();
@@ -192,5 +248,42 @@ public class MyMedications extends BaseActivity {
                 .setReorderingAllowed(true)
                 .add((int) medication.getId(), MyMedicationsFragment.class, bundle)
                 .commit();
+    }
+
+    private void setActive(boolean isActive) {
+        int primaryColor = MaterialColors.getColor(
+                this, androidx.appcompat.R.attr.colorPrimary, Color.BLACK
+        );
+        int onPrimaryColor = MaterialColors.getColor(
+                this, com.google.android.material.R.attr.colorOnPrimary, Color.WHITE
+        );
+
+        MaterialButton selected = isActive ? activeButton : inactiveButton;
+        selected.setStrokeWidth(0);
+        selected.setBackgroundTintList(ColorStateList.valueOf(primaryColor));
+        selected.setTextColor(onPrimaryColor);
+
+        MaterialButton unselected = isActive ? inactiveButton : activeButton;
+        unselected.setStrokeWidth(3);
+        unselected.setStrokeColor(ColorStateList.valueOf(primaryColor));
+        unselected.setBackgroundTintList(ColorStateList.valueOf(Color.TRANSPARENT));
+        unselected.setTextColor(primaryColor);
+
+        if (isActive && activeLayout.getChildCount() == 0 && inactiveLayout.getChildCount() > 0) {
+            scrollMyMeds.setVisibility(GONE);
+            noMeds.setVisibility(VISIBLE);
+        } else {
+            scrollMyMeds.setVisibility(VISIBLE);
+            noMeds.setVisibility(GONE);
+        }
+    }
+
+    private void populateViews(ArrayList<Medication> patientMeds) {
+        patientMeds.stream()
+                .filter(med -> med.getChild() == null)
+                .forEach(med -> createMyMedCard(
+                        med,
+                        med.isActive() ? activeLayout : inactiveLayout
+                ));
     }
 }
